manifests/tubearchivist/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tubearchivist
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: privileged
