manifests/tubearchivist/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tubearchivist
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tubearchivist
    spec:
      containers:
        - name: tubearchivist
          image: bbilly1/tubearchivist
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: media
              mountPath: /youtube
              subPath: youtube
            - name: cache
              mountPath: /cache
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          startupProbe:
            httpGet:
              path: /api/health/
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/health/
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health/
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: cache
          persistentVolumeClaim:
            claimName: cache
