manifests/tubearchivist/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: tubearchivist
  ports:
    - name: http
      port: 80
      targetPort: http
